# First-OS-Build

./: .gdbinit  .gitignore  CHANGELOG.md  GITHUB_RELEASE_NOTES.md  GITHUB_RELEASE_TEMPLATE.md  Makefile  OS.code-workspace  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  build.sh  grub.cfg  release.sh  toolchain.cmake
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml
boot/: boot.asm
complete-release-v1.1.1/: QUICK_START.md
complete-release-v1.1.1/examples/hello_world/: hello.txt
final-release/: Makefile  RELEASE_ANNOUNCEMENT.md  linker.ld
final-release/kernel/: keyboard.cpp  keyboard.h  memory.h  string.h
final-release/scripts/: check-system.sh  test.sh
kernel/: compiler.cpp  compiler.h  editor.cpp  editor.h  filesystem.cpp  interrupts.cpp  interrupts.h  kernel.cpp  kernel.h  keyboard.cpp  keyboard.h  memory.cpp  memory.h  stdio.cpp  string.cpp  string.h
release/: CHANGELOG.md  RELEASE_NOTES.md
release/kernel/: editor.cpp  editor.h  filesystem.cpp  filesystem.h  interrupts.cpp  interrupts.h  isr.asm  kernel.cpp  kernel.h  keyboard.h  memory.cpp  stdio.h
release/v1.0.0/: CMakeLists.txt  INSTALL.md  README.md  RELEASE_CHECKLIST.txt
release/v1.0.0/kernel/: interrupt_asm.asm  kernel.h  memory.cpp  multiboot.h  stdio.cpp  string.cpp
release/v1.0.0/scripts/: build.sh  make_release.sh  setup_toolchain.sh  test_release.sh
releases/ghost-sec-v2.0.0/: README.txt  SHA256SUMS
releases/ghost-sec-v2.0.1/: README.txt  SHA256SUMS
scripts/: build.sh  github_release.sh  prepare_complete_release.sh  prepare_release.sh  run.sh  verify_release.sh
tests/: CMakeLists.txt  test_main.cpp
